# daruma

./: .dockerignore  .gitattributes  .gitignore  .mcp.json.example  AGENTS.md  CHANGELOG.md  CHANGELOG.ru.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE  LICENSE.commons-clause.md  README.md  docker-compose.yml  install.sh
apps/cli/: Cargo.toml  README.md
apps/cli/src/: format.rs  main.rs  policy_claude.md  policy_codex.md  policy_omc_guard.md
apps/desktop/: Cargo.toml
apps/desktop/src/: cmds.rs  context.rs  flush.rs  local_executor.rs  main.rs  onboarding.rs  outbox.rs  remote.rs  render.rs  replica.rs
apps/mcp/: Cargo.toml
apps/mcp/src/: main.rs
apps/mobile/: Cargo.toml  README.md  module.toml
apps/mobile/src/: main.rs
apps/server/: Cargo.toml  build.rs
apps/server/prompts/: analyze_complexity.toml
apps/server/src/: ai.rs  cors.rs  error.rs  lib.rs  main.rs  mcp_downloads.rs  state.rs  workspace_graph.rs  ws.rs
apps/server/src/middleware/: auth.rs  mod.rs  rate_limit.rs  request_id.rs
apps/server/tests/: activity_e2e.rs  admin_document_sweep.rs  agent_inbox.rs  agent_ops_read_e2e.rs  ai_ops_events.rs  artifact_registry_e2e.rs  audit_primitives.rs  auth.rs  auth_actor_propagation.rs  auto_append_logs.rs  blocks_aware_drain.rs  claims_e2e.rs  collection_limits.rs  comments_e2e.rs  complexity_hints_writeback.rs  device_identity.rs  document_tools.rs  drain_gate_compensation.rs  healthz.rs  idempotency_e2e.rs  idempotent_dispatch.rs  mcp_dispatch.rs  mcp_http.rs  multi_agent_e2e.rs  parallel_drain.rs  plan_only_intake_e2e.rs  plan_readiness.rs  plan_tools.rs  plans_e2e.rs  quotas.rs  rate_limit.rs  relations_e2e.rs  relations_tools.rs  replica_events.rs  repo_scopes.rs  request_id.rs  response_shape_e2e.rs  rules_api.rs  run_timeline_e2e.rs  search_e2e.rs  (+16 more)
crates/ai/: Cargo.toml
crates/ai-infra/: Cargo.toml
crates/ai-infra/src/: client.rs  config.rs  error.rs  lib.rs  prompts.rs  provider.rs  tools.rs  untrusted.rs
crates/ai/prompts/: decompose.toml  parse.toml  research.toml  scope.toml  suggest.toml  summarize.toml
crates/ai/src/: analyze_complexity.rs  config.rs  decompose.rs  lib.rs  parse.rs  prompts.rs  provider.rs  research.rs  scope.rs  suggest.rs  summarize.rs  tools.rs  untrusted.rs
crates/api-dto/: Cargo.toml
crates/api-dto/src/: command.rs  lib.rs  mutation.rs  plans.rs  ws.rs
crates/auth/: Cargo.toml
crates/auth/src/: capability.rs  context.rs  lib.rs  scope.rs  store.rs  token.rs  verify.rs
crates/core/: Cargo.toml
crates/core/src/: bus.rs  command.rs  conflict.rs  embed.rs  handler.rs  lib.rs  lifecycle_gate.rs  path_lease.rs  plan_concurrency.rs  plan_readiness.rs  relation_enforcement.rs  repos.rs  rule_engine.rs  search.rs
crates/core/tests/: bulk_ops.rs  delete_task_plan_cascade.rs  document_commands.rs  handoff_commands.rs  lifecycle_gate.rs  plan_cycle.rs  plan_reparent.rs  relations_cycle.rs  relations_enforcement.rs  relations_link.rs  relations_was_blocking.rs  rule_engine.rs  run_liveness.rs  run_notes.rs  semantic_events.rs
crates/discovery/: Cargo.toml
crates/discovery/src/: lib.rs  mdns.rs  pairing.rs  qr.rs  tls.rs
crates/domain/: Cargo.toml
crates/domain/src/: activity.rs  agent.rs  artifact.rs  audit_finding.rs  comment.rs  complexity.rs  device.rs  document.rs  evidence.rs  external_ref.rs  field_ownership.rs  handoff.rs  lib.rs  plan.rs  project.rs  project_settings.rs  relation.rs  rule.rs  run.rs  session.rs  signal.rs  task.rs  work_lease.rs  work_unit.rs
crates/events/: Cargo.toml
crates/events/src/: bus.rs  envelope.rs  event.rs  lib.rs  store.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: client.rs  credentials.rs  lib.rs  paths.rs  prompts.rs  protocol.rs  server.rs  session_metadata.rs  tools.rs  workspace.rs
crates/mcp/tests/: ai_analyze_complexity.rs  feature_tiers_doc.rs  list_project_selection.rs  plan_only_intake.rs  plan_parent_patch.rs  plan_readiness_tools.rs  run_steps.rs  session_artifacts.rs  workspacegraph_tools.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 0001_initial.sql  0002_comments.sql  0003_task_timestamps.sql  0004_tokens.sql  0005_agent_acks.sql  0006_webhooks.sql  0007_activity.sql  0008_plans_runs_sessions.sql  0009_task_relations.sql  0010_tasks_actors.sql  0011_run_liveness.sql  0012_webhook_enrich.sql  0013_run_notes.sql  0014_documents.sql  0015_task_complexity_hints.sql  0016_comment_kind.sql  0017_source_provenance.sql  0018_project_slug.sql  0019_task_last_change_audit.sql  0020_entity_versions.sql  0021_session_artifacts.sql  0022_project_identifier_aliases.sql  0023_device_envelope.sql  0024_tenants.sql  0026_removed_placeholder.sql  0028_triage_queue.sql  0029_unique_event_origins.sql  0030_local_workspace_roots.sql  0031_work_leases.sql  0032_task_due_notifications.sql  0033_generic_leases.sql  0034_project_settings.sql  0035_work_units.sql  0036_artifact_registry.sql  0037_lifecycle_rules.sql  0038_evidence_registry.sql  0039_document_read_tracking.sql  0040_task_status_changed_at.sql  0041_audit_findings.sql  0042_document_lifecycle.sql  (+9 more)
crates/storage/src/: activity_repo.rs  agent_inbox_repo.rs  artifact_repo.rs  audit_finding_repo.rs  capability_profile_repo.rs  claim_repo.rs  comment_repo.rs  db.rs  device_repo.rs  document_repo.rs  entity_version.rs  event_store.rs  evidence_repo.rs  external_ref_repo.rs  handoff_repo.rs  idempotency_repo.rs  lib.rs  plan_repo.rs  project_repo.rs  project_settings_repo.rs  relation_repo.rs  repo_scope_repo.rs  rule_repo.rs  run_note_repo.rs  run_repo.rs  session_repo.rs  snapshot_repo.rs  task_complexity_repo.rs  task_repo.rs  tenant_quota_repo.rs  token_repo.rs  webhook_enrichment.rs  webhook_repo.rs  work_lease_repo.rs  work_unit_repo.rs  workspace_graph_repo.rs
crates/storage/tests/: tasks_actors_backfill.rs
crates/sync/: Cargo.toml
crates/sync/src/: hub.rs  lib.rs  wire.rs
crates/webhooks/: Cargo.toml
crates/webhooks/src/: dispatcher.rs  enrich.rs  lib.rs  model.rs  sign.rs  store.rs
crates/webhooks/tests/: enrich.rs
docs/: ARCHITECTURE.md  (+13 more)
(+159 files in other folders)
