[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/domain",
    "crates/events",
    "crates/storage",
    "crates/core",
    "crates/sync",
    "crates/ai",
    "crates/ai-infra",
    "crates/auth",
    "crates/webhooks",
    "crates/mcp",
    "crates/api-dto",
    "crates/discovery",
    "apps/server",
    "apps/desktop",
    "apps/cli",
    "apps/mobile",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0 WITH Commons-Clause"
authors = ["Daruma contributors"]
repository = "https://github.com/tupical/daruma"
description = "Daruma — execution layer of Meisei: an agent-native, local-first execution runtime."

[workspace.dependencies]
# Internal crates
daruma-shared  = { path = "crates/shared" }
daruma-domain  = { path = "crates/domain" }
daruma-events  = { path = "crates/events" }
daruma-storage = { path = "crates/storage" }
daruma-core    = { path = "crates/core" }
daruma-sync    = { path = "crates/sync" }
daruma-ai      = { path = "crates/ai" }
daruma-ai-infra = { path = "crates/ai-infra" }
daruma-auth    = { path = "crates/auth" }
daruma-webhooks = { path = "crates/webhooks" }
daruma-mcp     = { path = "crates/mcp" }
daruma-api-dto = { path = "crates/api-dto" }

# Async runtime
tokio    = { version = "1.52", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "signal", "io-util"] }
futures  = "0.3"
async-trait = "0.1"

# Errors / logging
thiserror = "2.0"
anyhow    = "1.0"
tracing   = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serde
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# IDs / time
uuid   = { version = "1.10", features = ["v4", "v7", "serde", "js"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

# Storage
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "chrono", "uuid", "macros", "migrate"] }
fastbloom = "0.7"

# Concurrent map (used by sync hub for per-subscriber WS fanout — §3.9.4)
dashmap = "6"

# HTTP / WS
axum       = { version = "0.8", features = ["ws", "macros"] }
tower      = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
reqwest    = { version = "0.13", features = ["json", "stream"] }
tokio-tungstenite = "0.29"
hyper      = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }

# Auth / crypto
argon2  = "0.5"
rand    = "0.8"
base64  = "0.22"
hmac    = "0.12"
sha2    = "0.10"
hex     = "0.4"
subtle  = "2"
biscuit-auth = "6.0"

# TLS / certificates
rcgen        = { version = "0.13", features = ["pem"] }
rustls       = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }

# mDNS service discovery
mdns-sd = "0.12"

# QR code generation
qrcode = "0.14"
image  = { version = "0.25", default-features = false, features = ["png"] }

# Internal discovery crate
daruma-discovery = { path = "crates/discovery" }

# AI prompt registry (§3.8.5)
toml         = { version = "0.8", default-features = false, features = ["parse"] }
tinytemplate = "1.2"
once_cell    = "1.20"

[package]
name = "daruma"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
daruma-auth = { workspace = true, optional = true }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1
