[package]
name = "taskagent-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "taskagent"
path = "src/main.rs"

[dependencies]
taskagent-mcp = { workspace = true }

tokio       = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI-only deps (kept local — workspace-wide doesn't need them yet).
clap = { version = "4.5", features = ["derive", "env"] }
comfy-table = "7"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }
