[package]
name = "daruma-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "daruma-desktop"
path = "src/main.rs"

[dependencies]
# §3.4 W2.1: embed clients reach for runtime types via `daruma_core::embed`
# only (not `daruma-storage` / `daruma-events` directly). Pure-types
# crates (`daruma-shared`, `daruma-domain`) remain direct deps as
# they have no I/O surface. `daruma-sync` is unused by the CLI today
# but kept opt-in for the upcoming GPUI client.
daruma-shared     = { workspace = true }
daruma-domain     = { workspace = true }
daruma-core       = { workspace = true }
daruma-sync       = { workspace = true }
daruma-ai-infra   = { workspace = true }
daruma-discovery  = { workspace = true }
mdns-sd              = { workspace = true }
rustls               = { workspace = true }
tokio-rustls         = { workspace = true }
sha2                 = { workspace = true }
hex                  = { workspace = true }
subtle               = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sqlx        = { workspace = true }
reqwest     = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow      = { workspace = true }
chrono      = { workspace = true }
futures     = { workspace = true }
async-trait = { workspace = true }
# GPUI — Zed's GPU-accelerated UI framework.
#
# Intentionally disabled in workspace builds: GPUI is a git-only dependency
# that drags the entire Zed monorepo and only links on a graphical host
# (X11/Wayland/macOS/Win32). The server build (Linux container) does not
# need it. To enable the GPUI desktop client locally:
#   1. Uncomment the line below.
#   2. Pin to a specific commit rev for reproducibility.
#   3. Build on the host:  cargo run -p daruma-desktop
#
# gpui = { git = "https://github.com/zed-industries/zed", branch = "main" }

[features]
## Enable camera-based QR code scanning for pairing (requires nokhwa + a
## graphical host).  Disabled by default — the feature is a stub; the actual
## nokhwa integration will be added in a future revision.
camera-pairing = []
