[package]
name = "taskagent-mcp-bin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "taskagent-mcp"
path = "src/main.rs"

[dependencies]
taskagent-mcp = { workspace = true }

tokio   = { workspace = true }
reqwest = { workspace = true }
anyhow  = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
