[package]
name = "daruma-mobile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Daruma mobile client scaffold (Tauri 2 target; HTTP probe binary today)"

[[bin]]
name = "daruma-mobile"
path = "src/main.rs"

[dependencies]
tokio       = { workspace = true }
reqwest     = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
