[package]
name = "daruma-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "daruma_server"
path = "src/lib.rs"

[[bin]]
name = "daruma-server"
path = "src/main.rs"

[dependencies]
daruma-shared     = { workspace = true }
daruma-domain     = { workspace = true }
daruma-discovery  = { workspace = true }
daruma-events     = { workspace = true, features = ["runtime"] }
tokio-rustls         = { workspace = true }
hyper                = { workspace = true }
hyper-util           = { workspace = true }
daruma-storage = { workspace = true }
daruma-core    = { workspace = true }
daruma-sync    = { workspace = true }
daruma-ai-infra = { workspace = true }
daruma-auth    = { workspace = true }
daruma-webhooks = { workspace = true }
daruma-api-dto = { workspace = true }
daruma-mcp     = { workspace = true }
reqwest      = { workspace = true }
tokio       = { workspace = true }
axum        = { workspace = true }
tower       = { workspace = true }
tower-http  = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sqlx        = { workspace = true }
chrono      = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow      = { workspace = true }
futures     = { workspace = true }
uuid        = { workspace = true }
sha2        = { workspace = true }
hmac        = { workspace = true }
hex         = { workspace = true }
base64      = { workspace = true }

[features]
## When enabled every dispatch() call derives the actor from the bearer token,
## ignoring any client-supplied actor override.  Default is off so legacy
## clients that send an explicit Actor::User are still accepted.
actor_strict = []

[dev-dependencies]
async-trait = { workspace = true }
tokio-tungstenite = { workspace = true }
tower      = { workspace = true }
url        = "2"
