[package]
name = "daruma-ai-infra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
# Exposes provider test doubles (e.g. `testing::FakeProvider`) for reuse
# in dependent crates' tests. Opt-in for upper layers via `vendor/oss`.
testing = []

[dependencies]
daruma-shared = { workspace = true }
reqwest = { workspace = true }
tokio   = { workspace = true }
serde   = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing  = { workspace = true }
thiserror = { workspace = true }

# §3.8.5 prompt registry
toml         = { workspace = true }
tinytemplate = { workspace = true }
once_cell    = { workspace = true }
