[package]
name = "taskagent-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
taskagent-shared = { workspace = true }
taskagent-domain = { workspace = true }
taskagent-events = { workspace = true, features = ["runtime"] }
taskagent-core   = { workspace = true }
reqwest = { workspace = true }
tokio   = { workspace = true }
serde   = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing  = { workspace = true }
chrono   = { workspace = true }
thiserror = { workspace = true }
uuid     = { workspace = true }

# §3.8.5 prompt registry
toml         = { workspace = true }
tinytemplate = { workspace = true }
once_cell    = { workspace = true }
