[package]
name = "taskagent-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
taskagent-ai-infra = { workspace = true }
taskagent-shared = { workspace = true }
taskagent-domain = { workspace = true }
taskagent-events = { workspace = true, features = ["runtime"] }
taskagent-core   = { workspace = true }
tokio   = { workspace = true }
serde   = { workspace = true }
serde_json = { workspace = true }
chrono   = { workspace = true }
uuid     = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
# Reuse the shared `FakeProvider` test double from the infra layer.
taskagent-ai-infra = { workspace = true, features = ["testing"] }
