[package]
name = "daruma-ai"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
daruma-ai-infra = { workspace = true }
daruma-shared = { workspace = true }
daruma-domain = { workspace = true }
daruma-events = { workspace = true, features = ["runtime"] }
daruma-core   = { workspace = true }
tokio   = { workspace = true }
serde   = { workspace = true }
serde_json = { workspace = true }
chrono   = { workspace = true }
uuid     = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
# Reuse the shared `FakeProvider` test double from the infra layer.
daruma-ai-infra = { workspace = true, features = ["testing"] }
