[package]
name = "taskagent-api-dto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
taskagent-shared  = { workspace = true }
taskagent-domain  = { workspace = true }
taskagent-events  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
