[package]
name = "daruma-api-dto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
daruma-shared  = { workspace = true }
daruma-domain  = { workspace = true }
daruma-events  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
