[package]
name = "daruma-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
daruma-shared  = { workspace = true }
daruma-domain  = { workspace = true }

# Errors
thiserror = { workspace = true }

# Crypto / random
argon2 = { workspace = true }
rand   = { workspace = true }
base64 = { workspace = true }

# Serde
serde      = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# HTTP (middleware)
axum  = { workspace = true }

# Async
tokio       = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
