[package]
name = "taskagent-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
taskagent-shared  = { workspace = true }
taskagent-domain  = { workspace = true }
taskagent-events  = { workspace = true, features = ["runtime"] }
taskagent-storage = { workspace = true }
taskagent-api-dto = { workspace = true }
async-trait = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
