[package]
name = "daruma-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
daruma-shared  = { workspace = true }
daruma-domain  = { workspace = true }
daruma-events  = { workspace = true, features = ["runtime"] }
daruma-storage = { workspace = true }
daruma-api-dto = { workspace = true }
async-trait = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
