[package]
name = "taskagent-events"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
taskagent-shared = { workspace = true }
taskagent-domain = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
async-trait = { workspace = true }
tokio       = { workspace = true, optional = true }
chrono      = { workspace = true }

[features]
default = []
runtime = ["dep:tokio"]
