[package]
name = "taskagent-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
taskagent-shared    = { workspace = true }
taskagent-domain    = { workspace = true }
taskagent-events    = { workspace = true, features = ["runtime"] }
taskagent-auth      = { workspace = true }
taskagent-webhooks  = { workspace = true }
sqlx        = { workspace = true }
tokio       = { workspace = true }
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
tracing     = { workspace = true }
thiserror   = { workspace = true }
fastbloom   = { workspace = true }
