[package]
name = "daruma-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
daruma-shared    = { workspace = true }
daruma-domain    = { workspace = true }
daruma-events    = { workspace = true, features = ["runtime"] }
daruma-auth      = { workspace = true }
daruma-webhooks  = { workspace = true }
sqlx        = { workspace = true }
tokio       = { workspace = true }
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
tracing     = { workspace = true }
thiserror   = { workspace = true }
fastbloom   = { workspace = true }
