[package]
name = "daruma-sync"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
daruma-shared  = { workspace = true }
daruma-domain  = { workspace = true }
daruma-events  = { workspace = true, features = ["runtime"] }
daruma-core    = { workspace = true }
daruma-api-dto = { workspace = true }
tokio   = { workspace = true }
serde   = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
uuid    = { workspace = true }
